--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,13 @@
     justify-content: space-between;
 }
 .drum{
-    background-color: blueviolet; 
+    background-image: radial-gradient(rgb(221, 98, 211), rgb(78, 20, 238),yellow); 
     height: 100px; 
     width: 100px;
-    margin: 20px;
+    margin: 8px;
+    border-radius: 1.5em;
+    box-shadow: inset 0 -.7em .5em rgba(0, 0, 0, 0.3);
+}
+body{
+    background-image: repeating-linear-gradient(rgb(134, 101, 101),rgb(41, 41, 80),rgb(156, 216, 156),yellow,white,gray);
 }
